--- a/resources/public/css/default.css
+++ b/resources/public/css/default.css
@@ -2,7 +2,7 @@
 
 
 body {
-  padding: 64px 16px 16px 16px;
+  padding: 0;
 }
 
 
@@ -78,5 +78,24 @@ div#preloading {
   margin: 1em;
 }
 
+#github-ribbon {
+}
 
+#floating-header {
+  display: none;
+  position: fixed;
+  text-align: center;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 8px;
+  width: 100%;
+  z-index: 100;
+  background-color: #dfdfff;
+}
+
+#main-content {
+  margin: 0;
+  padding: 3em 0.5em;
+}
 
